# sphinx-example-index

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  cron-ci.yaml
docs/: api.rst  conf.py  development-guide.rst  index.rst
licenses/: README.rst  TEMPLATE_LICENCE.rst
sphinx_example_index/: conftest.py
sphinx_example_index/example_subpkg/: setup_package.py
src/sphinx_example_index/: __init__.py  identifiers.py  marker.py  postprocessor.py  preprocessor.py
src/sphinx_example_index/data/templates/example_index/: examplepage.rst  indexpage.rst  tagpage.rst
src/sphinx_example_index/pages/: __init__.py  _examplepage.py  _indexpage.py  _tagpage.py  _templating.py
tests/: __init__.py  conftest.py  example_index_build_test.py  identifiers_test.py  sphinx_integration_test.py  utils.py  version_test.py
tests/cases/test-custom-template/: conf.py  index.rst  page-with-examples.rst
tests/cases/test-custom-template/_templates/example_index/: examplepage.rst
tests/cases/test-example-index/: conf.py  index.rst  links.rst  matplotlib.rst  page-with-examples.rst
