[metadata]
name = sphinx-example-index
author = Astropy Developers
author_email = hi@jsick.codes
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://sphinx-example-index.reathedocs.io
description = Sphinx extension for collecting examples from narrative documentation.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = astropy/sphinx-example-index

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    sphinx

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
sphinx_example_index = data/*

[tool:pytest]
testpaths = "sphinx_example_index" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    sphinx_example_index/_astropy_init*
    sphinx_example_index/conftest.py
    sphinx_example_index/*setup_package*
    sphinx_example_index/tests/*
    sphinx_example_index/*/tests/*
    sphinx_example_index/extern/*
    sphinx_example_index/version*
    */sphinx_example_index/_astropy_init*
    */sphinx_example_index/conftest.py
    */sphinx_example_index/*setup_package*
    */sphinx_example_index/tests/*
    */sphinx_example_index/*/tests/*
    */sphinx_example_index/extern/*
    */sphinx_example_index/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
max-line-length = 100
